--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bitscale
 Type: Package
-Title: Convert the theta scale of an item response theory (IRT) model into a bit scale.
+Title: Convert the theta scale of an item response theory (IRT) model into a bit scale
 Version: 0.1.0
 Authors@R: c(
     person(
