corrected SEs and information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bit_plot_item)
 export(bit_plot_test_information)
+export(bit_plot_transformation)
 export(bit_score_information)
 export(bit_scores)
 importFrom(ggplot2,aes)
@@ -9,6 +10,7 @@ importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
 importFrom(mirt,extract.item)
 importFrom(mirt,extract.mirt)
