added inverse method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(bit_plot_test_information)
 export(bit_plot_transformation)
 export(bit_score_information)
 export(bit_scores)
+export(bit_scores_inverse)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
@@ -17,3 +18,5 @@ importFrom(mirt,extract.mirt)
 importFrom(mirt,iteminfo)
 importFrom(mirt,probtrace)
 importFrom(mirt,testinfo)
+importFrom(stats,approxfun)
+importFrom(stats,splinefun)
